Fix issue of incorrect price being returned with the receipt.

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,3 +18,14 @@ h1, h3, h4 {
 ul {
   list-style-type: none;
 }
+.jumbotron img {
+    width:600px;
+    height:400px;
+}
+.row input {
+  margin-right: 5px;
+}
+.receiptInfo {
+  font-size: 30px;
+  font-weight: bold;
+}
